--- a/JS/L3/Classwork/classwork3_1.html
+++ b/JS/L3/Classwork/classwork3_1.html
@@ -8,13 +8,11 @@ alert( [] ==! [] ); // true
 Какие преобразования происходят при вычислении?
 -->
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+    В первом случае false, т.к массив это объект, два разных объекта всегда false.
+    Во втором случае:
+    1.Преобразовуется правая часть выражения "Логическое нет" примененное к массиву, который всегда true даст false.
+    2.Дальше объект сравнивается с примитивом, происходит приведения объекта к примитиву. Так как имеется операция сравнения,
+    имеем математическое преобразование.Так как метода valueOf в Array.prototype нету, вызывается метод toString();
+    На этом этапе имеем (''==false)
+    3.При численном преобразовании оба операнда будут преобразованные в 0 => (0==0) => true.
