--- a/JS/L3/Homework/homework3_3.html
+++ b/JS/L3/Homework/homework3_3.html
@@ -37,7 +37,7 @@ ladder.up().up().down().up().down().showStep(); // 1
 </head>
 <body>
     <script>
-        /*var ladder = {
+        var ladder = {
             step: 0,
             up: function() { // вверх по лестнице
                 this.step++;
@@ -53,19 +53,10 @@ ladder.up().up().down().up().down().showStep(); // 1
             }
         };
 
-        ladder.up().up().down().up().down().showStep();*/
+        ladder.up().up().down().up().down().showStep();
 
 
-        function f(){
-            alert(arguments[0]);
-        }
 
-        f("a");
-
-
-      var slice=[].slice;
-
-      slice.call(arguments)
 
 
 
