--- a/JS/L2/Classwork/classwork2_3.html
+++ b/JS/L2/Classwork/classwork2_3.html
@@ -31,6 +31,7 @@ army[5](); // стрелок выводит 10, а должен 5.
 </head>
 <body>
     <script>
+        //1-й способ
         function makeArmy() {
             var shooters = [];
 
@@ -45,10 +46,29 @@ army[5](); // стрелок выводит 10, а должен 5.
             return shooters;
 
         }
+
+        //2-й способ
+      /*  function makeArmy() {
+            var shooters = [];
+
+            for (let i = 0; i< 10; i++) {
+                    var shooter = function() { // функция-стрелок
+                        alert(i); // выводит свой номер
+                    };
+                    shooters.push(shooter);
+
+            }
+            return shooters;
+
+        }*/
+
         var army = makeArmy();
         army[0](); // стрелок выводит 10, а должен 0
         army[5](); // стрелок выводит 10, а должен 5.
         army[6](); // стрелок выводит 10, а должен 6.
+
+
+
 
     </script>
 </body>
