--- a/JS/L9/Homework/Homework9_2.html
+++ b/JS/L9/Homework/Homework9_2.html
@@ -1,62 +1,83 @@
+<!--
+###Задача 2.
+Создайте круг красного цвета с надписью "Скидка". Когда курсор пользователя будет приближаться к ней, "Скидка" должна от него "убегать", не давая пользователю нажать на красный круг.
+Если круг выйдет за одну из сторон экрана, то он должен, появится с противоположной стороны.-->
+
 <!DOCTYPE html>
 <html lang="en">
-<style>
-.circle{
-    border-radius: 50%;
-    background-color: red;
-    width:100px;
-    height:100px;
-    padding:10px;
-    position:absolute;
-}
-</style>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <style>
+        #ball {
+            border-radius: 50%;
+            background-color: red;
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            left: 600px;
+            top: 200px;
+        }
+        #sale{
+            color: yellow;
+            display: inline-block;
+            padding-left: 30px;
+            padding-top: 40px;
+        }
+    </style>
 </head>
 <body>
-<div class="circle">
-    <h1>
-Скидка
-    </h1>
 
-</div>
+<div id="ball"><span id = 'sale'>SALE</span></div>
+
+<div id="div2"></div>
 
 <script>
-    window.onload=function(){
-        var div=document.querySelector(".circle");
-            div.style.left=document.documentElement.clientWidth/2+"px";
-            div.style.top=document.documentElement.clientHeight/2+"px";
+    window.onload = function () {
 
-
-        document.onmousemove=function(e){
-
-            var coordX= e.pageX;
-            var coordY= e.pageY;
-           var difX=Math.abs(coordX-div.offsetLeft);
-            var difY=Math.abs(coordY-div.offsetTop);
-            var difXR=Math.abs(div.offsetLeft-coordX+div.clientWidth);
-            var difYR=Math.abs(div.offsetTop-coordY+div.clientHeight);
-            if((difX<=40&&difY<=40)||(difXR<=40&&difYR<=40)){
-              var arr=generate(div.offsetLeft,div.offsetTop);
-            div.style.left=arr[0]+"px";
-            div.style.top=arr[1]+"px";
+        var target = document.getElementById('target');
+        var r = 50;
+        var cHeight = document.documentElement.clientHeight;
+        var cWidth = document.documentElement.clientWidth;
+        document.addEventListener('mousemove', function(e) {
+            var ball_pos = ball.getBoundingClientRect();
+            var ball_x = ball_pos.left + 50;
+            var ball_y = ball_pos.top + 50;
+            //If distance beetwen cursor and div less then constant, then move
+            if ( Math.sqrt((e.offsetX-ball_x)*(e.offsetX-ball_x)+(e.offsetY-ball_y)*(e.offsetY-ball_y)) < 80){
+                //Boundaries
+                if( ball_x >= cWidth - r){
+                    ball.style.left = r/10 +'px';
+                }
+                if( ball_x <= r){
+                    ball.style.left = (cWidth - 2*r) +'px';
+                }
+                if( ball_y >= cHeight - r){
+                    ball.style.top = r/10 +'px';
+                }
+                if( ball_y <= r){
+                    ball.style.top = (cHeight - 2*r) +'px';
+                }
+                //Cases for div movement
+                if(e.offsetX < ball_x){
+                    ball.style.left = (ball.offsetLeft + 10) +'px';
+                }
+                if(e.offsetX > ball_x){
+                    ball.style.left = (ball.offsetLeft - 10) +'px';
+                }
+                if(e.offsetY < ball_y){
+                    ball.style.top = (ball.offsetTop + 10) +'px';
+                }
+                if(e.offsetY  > ball_y){
+                    ball.style.top = (ball.offsetTop - 10) +'px';
+                }
             }
-        }
-        function generate(coordX,coordY){
-           var arr=[];
-            var randomX=(Math.random())*600;
-            var randomY=(Math.random())*400;
-
-            /*if(finalX>=document.documentElement.clientWidth)
-            finalX=randomX;
-            else if(finalY>=document.documentElement.clientHeight)
-                finalY=randomY;*/
-            arr.push(randomX,randomY);
-            return arr;
-
-
-        }
+            //console.log(ball_pos.left, ball_pos.top);
+            //console.log(e.offsetX, e.offsetY);
+        })
+        /*var div2 = document.getElementById("div2");
+         document.onmousemove = function (e) {
+         div2.innerHTML = "Событие onmouse<b>move</b> X:" + e.offsetX + " Y:" + e.offsetY;
+         }*/
     }
 </script>
 </body>
