--- a/Angular/L13/Homework/homework13_3.html
+++ b/Angular/L13/Homework/homework13_3.html
@@ -21,9 +21,16 @@
 
                 .controller("appCtrl",['$scope',function(scope) {
 
-                    scope.pat=new RegExp(scope.password);
-                    scope.passConfirmPat=scope.pat;
+                    scope.namePat= /^([a-zA-Zа-яА-Я]+\s+){3,}$/;
 
+                    scope.type=function(){
+                        var a=scope.passConfirm;
+                        if(a!=scope.password)
+                            scope.checker=true;
+                        else
+                            scope.checker=false;
+
+                    }
 
                 }])
     </script>
@@ -34,26 +41,27 @@
         <form name="myForm" novalidate class="form-control input-group">
                <div class="form-group">
                     <label>ФИО:</label><br>
-                   <input name="userName" class="input-lg" type="text" ><br>
+                   <input name="userName" class="input-lg" type="text" maxlength="20" ng-pattern="namePat" ng-model="name"><br>
+                   <p ng-show="myForm.userName.$invalid&&myForm.userName.$dirty">Invalid value</p>
                </div>
             <div class="form-group">
                 <label>Email:</label><br>
-                <input name="email" class="input-lg" type="email" required ng-model="ff"><br>
-                <p ng-show="myForm.email.$invalid&&myForm.email.$dirty">Invalid mail</p>
+                <input name="email" class="input-lg" type="email" required ng-model="mail"><br>
+                <p ng-show="myForm.email.$invalid&&myForm.email.$dirty">Invalid value</p>
             </div>
 
             <div class="form-group">
                 <label>Пароль:</label><br>
-                <input name="pass" class="input-lg" type="password" minlength="4" maxlength="10" ng-model="password"><br>
-                <p ng-show="myForm.pass.$invalid&&myForm.pass.$dirty" >Invalid mail</p>
+                <input name="pass" class="input-lg" type="password" minlength="4" maxlength="10" ng-model="password"  ng-keyup="type()"><br>
+                <p ng-show="myForm.pass.$invalid&&myForm.pass.$dirty" >Invalid value</p>
             </div>
             <div class="form-group">
                 <label>Подтвердите пароль:</label><br>
-                <input name="passConfirm" class="input-lg"  type="password" ng-model="passConfirm" ng-pattern="passConfirmPat"><br>
-                <p ng-show="myForm.passConfirm.$invalid&&myForm.passConfirm.$dirty" >Invalid mail</p>
+                <input name="passConfirm" class="input-lg"  type="password" ng-model="passConfirm" ng-keyup="type()"  maxlength="10"><br>
+                <p ng-show="(myForm.passConfirm.$invalid&&myForm.passConfirm.$dirty)||checker" >Invalid value</p>
             </div>
             <div class="form-group">
-                <input type="submit" class="btn-lg bg-info" ng-disabled="myForm.$invalid">
+                <input type="submit" class="btn-lg bg-info" ng-disabled="myForm.$invalid||checker">
             </div>
         </form>
     </div>
