--- a/Angular/L11/Classwork/classwork11_1.html
+++ b/Angular/L11/Classwork/classwork11_1.html
@@ -8,12 +8,15 @@
 <script src="..\..\angular.js"></script>
     <script>
         var model="Hello world";
+                //module
         var myapp=angular.module("myFirstAngApp",[])
+                //controller
                 .controller("myFirstAngAppCtrl",function($scope){
                     $scope.data=model;
                 })
     </script>
 </head>
+                <!--view-->
 <body  ng-controller="myFirstAngAppCtrl">
         <h1>{{data}}</h1>
 </body>
