--- a/Angular/L13/Homework/homework13_3.html
+++ b/Angular/L13/Homework/homework13_3.html
@@ -21,7 +21,7 @@
 
                 .controller("appCtrl",['$scope',function(scope) {
 
-                    scope.namePat= /^([a-zA-Zа-яА-Я]+\s+){3,}$/;
+
 
                     scope.type=function(){
                         var a=scope.passConfirm;
@@ -41,7 +41,7 @@
         <form name="myForm" novalidate class="form-control input-group">
                <div class="form-group">
                     <label>ФИО:</label><br>
-                   <input name="userName" class="input-lg" type="text" maxlength="20" ng-pattern="namePat" ng-model="name"><br>
+                   <input name="userName" class="input-lg" type="text" maxlength="20"  ng-model="name"><br>
                    <p ng-show="myForm.userName.$invalid&&myForm.userName.$dirty">Invalid value</p>
                </div>
             <div class="form-group">
